* fix sarfari 9 flex bug causing registers to overlap if screen is too small * Add hidden class for registers via sass partial

--- a/sass/px-simple-area-chart.scss
+++ b/sass/px-simple-area-chart.scss
@@ -21,12 +21,7 @@
 // Base
 @import "px-flexbox-design/_base.flexbox.scss";
 
-
-.wrapper {
-  width: 100%;
-  height: 100%;
-}
-
+@import "px-vis/_px-vis-chart-partial.scss";
 
 // Meta
 
